# minip2p

./: Cargo.toml  README.md  dx-plan.md  holepunch-plan.md  plan.md
crates/core/: README.md
crates/core/src/: error.rs  multiaddr.rs  protocol.rs
crates/dcutr/: README.md
crates/dcutr/src/: lib.rs
crates/identify/: README.md
crates/identify/src/: lib.rs
crates/swarm/: README.md
crates/swarm/src/: builder.rs  core.rs  driver.rs
crates/swarm/tests/: relay_holepunch_flow.rs
crates/transport/src/: transport.rs
examples/peer/: Cargo.toml  README.md
examples/peer/src/: direct.rs  main.rs  relay.rs
transports/quic/: Cargo.toml  README.md
transports/quic/src/: config.rs  connection.rs  lib.rs
transports/quic/tests/: ping_e2e.rs  swarm_e2e.rs  transport_contract.rs  two_peer.rs
