[package]
name = "minip2p-quic"
version = "0.1.0"
edition = "2024"

[dependencies]
minip2p-transport = { path = "../../packages/transport" }
minip2p-identity = { path = "../../packages/identity" }
minip2p-core = { path = "../../packages/core" }
quiche = "0.28"
getrandom = "0.3"

[dev-dependencies]
minip2p-multistream-select = { path = "../../packages/multistream-select" }
minip2p-ping = { path = "../../packages/ping" }
rcgen = "0.14"
tempfile = "3"
