[package]
name = "minip2p-quic"
version = "0.1.0"
edition = "2024"

[dependencies]
minip2p-transport = { path = "../../packages/transport" }
minip2p-identity = { path = "../../packages/identity" }
minip2p-core = { path = "../../packages/core" }
minip2p-tls = { path = "../../packages/tls" }
quiche = "0.28"
getrandom = "0.4"
tempfile = "3"

[dev-dependencies]
minip2p-multistream-select = { path = "../../packages/multistream-select" }
minip2p-ping = { path = "../../packages/ping" }
