[package]
name = "minip2p-quic"
version = "0.1.0"
edition = "2024"

[dependencies]
minip2p-transport = { path = "../../crates/transport" }
minip2p-identity = { path = "../../crates/identity" }
minip2p-core = { path = "../../crates/core" }
minip2p-tls = { path = "../../crates/tls" }
quiche = "0.28"
getrandom = "0.4"
tempfile = "3"

[dev-dependencies]
minip2p-multistream-select = { path = "../../crates/multistream-select" }
minip2p-ping = { path = "../../crates/ping" }
minip2p-identify = { path = "../../crates/identify" }
minip2p-swarm = { path = "../../crates/swarm" }
minip2p-identity = { path = "../../crates/identity" }
